--- a/style.scss
+++ b/style.scss
@@ -26,12 +26,36 @@ html {
   font-size: 16px;
 }
 
-// util class
+// util-font
+.font-h1 {
+  line-height: 3rem;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.font-h2 {
+  line-height: 2.25rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 
 .font-body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
+}
+
+// TODO 날짜 표시용 10px 폰트
+
+// util-components
+.input-body1 {
+  border: solid 1px #d9d9d9;
+  border-radius: 0.5rem;
+  height: 2.5rem;
+  box-sizing: border-box;
+  padding: 8px 12px;
+  font-size: 1rem;
+  line-height: 24px;
 }
 
 /* float 해제 클래스 */
@@ -65,14 +89,36 @@ nav {
       align-items: center;
       justify-content: center;
     }
+    .state-login {
+      border-radius: 0.5rem;
+      border: solid 1px #000000;
+    }
   }
 }
 
 // container
 main {
-  .container {
+  #container {
     width: 50rem;
     margin: 4.5rem auto 0;
+    padding: 0 2.5rem;
     min-height: 100vh;
+    #profile {
+      display: flex;
+      flex-direction: column;
+      margin: 0 0 2.5rem;
+      gap: 24px;
+      #Profile-img {
+        object-fit: cover;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+      }
+      input {
+        width: 21rem;
+      }
+    }
+    .user-article {
+    }
   }
 }
