--- a/style.css
+++ b/style.css
@@ -32,14 +32,20 @@ html {
 }
 
 .font-h1 {
-  line-height: 3rem;
   font-size: 2rem;
   font-weight: 700;
+  line-height: 3rem;
 }
 
 .font-h2 {
-  line-height: 2.25rem;
   font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2.25rem;
+}
+
+.font-h3 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 700;
 }
 
@@ -47,6 +53,12 @@ html {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
+}
+
+.font-tiny {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 400;
 }
 
 .input-body1 {
@@ -96,6 +108,9 @@ nav ul .state-login {
   border: solid 1px #000000;
 }
 
+main {
+  margin: 4rem 0 8rem;
+}
 main #container {
   width: 50rem;
   margin: 4.5rem auto 0;
@@ -105,7 +120,7 @@ main #container {
 main #container #profile {
   display: flex;
   flex-direction: column;
-  margin: 0 0 2.5rem;
+  margin: 0 0 3.5rem;
   gap: 24px;
 }
 main #container #profile #Profile-img {
@@ -117,4 +132,44 @@ main #container #profile #Profile-img {
 }
 main #container #profile input {
   width: 21rem;
+}
+main #container .my-article-section-title {
+  margin: 0 0 2rem;
+}
+
+#article-lists {
+  width: 45rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+#article-lists .article-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 50rem;
+}
+#article-lists .article-card img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 29rem;
+  border-radius: 1rem;
+}
+#article-lists .article-card .article-card-info {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+  gap: 0.5rem;
+  align-self: stretch;
+}
+#article-lists .article-card .article-card-info h3 {
+  height: 2.25rem;
+  text-align: justify;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+#article-lists .article-card .article-card-info .article-date {
+  color: #9d9d9d;
 }/*# sourceMappingURL=style.css.map */
