--- a/style.scss
+++ b/style.scss
@@ -28,14 +28,20 @@ html {
 
 // util-font
 .font-h1 {
-  line-height: 3rem;
   font-size: 2rem;
   font-weight: 700;
+  line-height: 3rem;
 }
 
 .font-h2 {
-  line-height: 2.25rem;
   font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2.25rem;
+}
+
+.font-h3 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 700;
 }
 
@@ -45,7 +51,11 @@ html {
   line-height: 1.5rem;
 }
 
-// TODO 날짜 표시용 10px 폰트
+.font-tiny {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 400;
+}
 
 // util-components
 .input-body1 {
@@ -98,6 +108,7 @@ nav {
 
 // container
 main {
+  margin: 4rem 0 8rem;
   #container {
     width: 50rem;
     margin: 4.5rem auto 0;
@@ -106,7 +117,7 @@ main {
     #profile {
       display: flex;
       flex-direction: column;
-      margin: 0 0 2.5rem;
+      margin: 0 0 3.5rem;
       gap: 24px;
       #Profile-img {
         object-fit: cover;
@@ -118,7 +129,44 @@ main {
         width: 21rem;
       }
     }
-    .user-article {
+    .my-article-section-title {
+      margin: 0 0 2rem;
+    }
+  }
+}
+
+#article-lists {
+  width: 45rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  .article-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 50rem;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 29rem;
+      border-radius: 1rem;
+    }
+    .article-card-info {
+      display: flex;
+      flex-direction: column;
+      padding: 0 1rem;
+      gap: 0.5rem;
+      align-self: stretch;
+      h3 {
+        height: 2.25rem;
+        text-align: justify;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .article-date {
+        color: #9d9d9d;
+      }
     }
   }
 }
