--- a/style.scss
+++ b/style.scss
@@ -45,10 +45,16 @@ html {
   font-weight: 700;
 }
 
-.font-body {
+.font-body1 {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
+}
+
+.font-body2 {
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.25rem;
 }
 
 .font-tiny {
@@ -110,7 +116,7 @@ nav {
 main {
   margin: 4rem 0 8rem;
   #container {
-    width: 50rem;
+    width: 45rem;
     margin: 4.5rem auto 0;
     padding: 0 2.5rem;
     min-height: 100vh;
@@ -139,23 +145,22 @@ main {
   width: 45rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
   .article-card {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 50rem;
     img {
       object-fit: cover;
-      width: 100%;
-      height: 29rem;
+      width: 45rem;
+      height: 25.3125rem;
       border-radius: 1rem;
     }
     .article-card-info {
       display: flex;
       flex-direction: column;
       padding: 0 1rem;
-      gap: 0.5rem;
+      gap: 0;
       align-self: stretch;
       h3 {
         height: 2.25rem;
