--- a/style.css
+++ b/style.css
@@ -86,7 +86,12 @@ html {
 
 nav {
   height: 3.75rem;
-  background-color: #f8f8f8;
+  z-index: 1;
+  background-color: #000000;
+  color: #fff;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -94,7 +99,7 @@ nav {
   padding: 0 3rem;
 }
 nav #logo {
-  fill: #000000;
+  fill: rgb(42, 169, 224);
 }
 nav ul {
   display: flex;
@@ -111,7 +116,7 @@ nav ul .nav-item {
 }
 nav ul .state-login {
   border-radius: 0.5rem;
-  border: solid 1px #000000;
+  border: solid 1px #fff;
 }
 
 main {
