--- a/style.scss
+++ b/style.scss
@@ -83,14 +83,18 @@ html {
 
 nav {
   height: 3.75rem;
-  background-color: #f8f8f8;
+  z-index: 1;
+  background-color: #000000;
+  color: #fff;
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0 3rem;
   #logo {
-    fill: #000000;
+    fill: rgb(42, 169, 224);
   }
   ul {
     display: flex;
@@ -106,7 +110,7 @@ nav {
     }
     .state-login {
       border-radius: 0.5rem;
-      border: solid 1px #000000;
+      border: solid 1px #fff;
     }
   }
 }
