--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -10,14 +10,6 @@ body {
 
 #navbar {
   border-bottom: 0.5px solid var(--Grey500);
-  // width: 100%;
-  // height: 59px;
-  // position: fixed;
-  // background-color: white;
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
-  // margin: auto;
   position: fixed;
   z-index: 50;
   width: 100%;
@@ -84,17 +76,17 @@ body {
   width: 100%;
   height: 2px;
   background: transparent;
-}
-
-.progress-container .progress-bar {
-  width: 0;
-  height: 2px;
-  background: #242424;
+  .progress-bar {
+    width: 0;
+    height: 2px;
+    background: #242424;
+  }
 }
 
 .content-container {
   // border: 1px solid black;
-  width: 750px;
+  width: 100%;
+  max-width: 750px;
   height: 80%;
   margin: 0 auto;
   padding-top: 60px;
@@ -133,6 +125,7 @@ body {
       width: 100%;
       cursor: pointer;
       .content-img {
+        
         inset: 0px;
         box-sizing: border-box;
         padding: 0px;
@@ -157,6 +150,9 @@ body {
         line-height: 1.4;
       }
       h4 {
+        @media screen and (max-width: 560px) {
+          font-size: 26px;
+        }
         color: var(--Grey800);
         font-size: 32px;
         margin-bottom: 10px;
@@ -182,11 +178,17 @@ body {
     .content-box:hover {
       .content-img {
         box-shadow: 0px 32px 94px -35px rgba(186, 184, 186, 1);
-        transform: translateY(-30px);
+        transform: translateY(-20px);
       }
       h4 {
         color: var(--blue300);
       }
     }
+  }
+}
+@media (max-width: 570px) {
+  h4 {
+    font-size: 26px;
+    color: white;
   }
 }
