--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -79,7 +79,16 @@ body {
   .progress-bar {
     width: 0;
     height: 2px;
-    background: #242424;
+    background: linear-gradient(
+      90deg,
+      red,
+      orange,
+      yellow,
+      green,
+      blue,
+      navy,
+      purple
+    );
   }
 }
 
@@ -110,7 +119,7 @@ body {
     }
   }
   .card-container {
-    padding: 80px 40px;
+    padding: 60px 40px;
     height: 80%;
     display: flex;
     justify-content: flex-start;
@@ -125,7 +134,6 @@ body {
       width: 100%;
       cursor: pointer;
       .content-img {
-        
         inset: 0px;
         box-sizing: border-box;
         padding: 0px;
@@ -153,6 +161,9 @@ body {
         @media screen and (max-width: 560px) {
           font-size: 26px;
         }
+        @media screen and (max-width: 525px) {
+          font-size: 20px;
+        }
         color: var(--Grey800);
         font-size: 32px;
         margin-bottom: 10px;
@@ -162,6 +173,9 @@ body {
         transition: 0.2s ease-in-out;
       }
       p {
+        @media screen and (max-width: 525px) {
+          font-size: 13px;
+        }
         color: var(--Grey700);
         font-size: 16px;
         margin-bottom: 10px;
@@ -186,9 +200,9 @@ body {
     }
   }
 }
-@media (max-width: 570px) {
+
+@media screen and (max-width: 560px) {
   h4 {
     font-size: 26px;
-    color: white;
   }
 }
