Update img input의 클릭영역과 가시영역을 일치시킵니다.

--- a/style.css
+++ b/style.css
@@ -142,6 +142,9 @@ main #container #profile #Profile-img {
   height: 10rem;
   border-radius: 50%;
 }
+main #container #profile label {
+  width: 10rem;
+}
 main #container #profile #img-input {
   display: none;
 }
