--- a/static/scss/profile.scss
+++ b/static/scss/profile.scss
@@ -74,6 +74,14 @@ html {
   line-height: 24px;
 }
 
+.button-body1 {
+  width: auto;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.5rem;
+  color: white;
+  background-color: #000000;
+}
+
 /* float 해제 클래스 */
 .clearfix::after {
   content: "";
@@ -113,13 +121,6 @@ html {
         gap: 1rem;
         input {
           width: 21rem;
-        }
-        button {
-          width: auto;
-          padding: 0.5rem 0.75rem;
-          border-radius: 0.5rem;
-          color: white;
-          background-color: #000000;
         }
       }
     }
