--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -1,18 +1,13 @@
-body{
-  margin: 0;
-}
-.wrap{
-  width: 100vw;
-  height: 100vh;
-}
+
 .modalFirstBlack{
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 100vh;
   left: 0;
   width: 100%;
   height: 100%;
   margin: 0%;
-  background-color: rgba(74, 70, 70, 1);
+  transition: 0.3s;
+  background-color: rgba(74, 70, 70, 0.5);
   display: flex;
   align-items: flex-end;
   z-index: 4;
@@ -96,7 +91,7 @@ body{
 }
 
 .modalPicture{
-width: 100%;
+width: 30%;
 height: 50%;
 border-radius: 10px;
 margin: 10px 0px 10px 0px;
