--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -16,28 +16,37 @@
   align-items: center;
   justify-content: space-between;
 }
-.overlay button {
+.overlay .btn {
+  box-sizing: border-box;
   padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
   height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .overlay .login {
   background: #000000;
   color: #ffffff;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .overlay .signup {
   background: #ffffff;
-  border: 1px solid #D9D9D9;
+  color: #000000;
+  border: 1px solid #d9d9d9;
 }
 .overlay .google {
-  background: #5383EC;
+  background: #5383ec;
   color: #ffffff;
 }
 .overlay .kakao {
-  background: #FEE500;
+  background: #fee500;
   color: #000000;
 }
-.overlay #login-modal {
+.overlay .auth-modal {
   padding: 2rem;
   width: 34rem;
   background-color: white;
@@ -46,7 +55,7 @@
   gap: 1rem;
   border-radius: 1rem;
 }
-.overlay #login-modal form {
+.overlay .auth-modal form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
