--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -51,7 +51,7 @@ body {
           .nav-item {
             list-style: none;
 
-            a {
+            .nav-item-btn {
               margin: 0 10px;
               color: var(--Grey700);
               padding: 12px 10px;
