--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -1,22 +1,25 @@
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
-  background: rgba(0, 0, 0, 0.48);
+.auth-modal {
+  padding: 2rem;
+  width: 34rem;
+  z-index: 2;
+  background-color: white;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 1rem;
 }
-.overlay .modal-header {
+.auth-modal form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.auth-modal .modal-header {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.overlay .btn {
+.auth-modal .btn {
   box-sizing: border-box;
   padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
@@ -25,7 +28,7 @@
   align-items: center;
   justify-content: center;
 }
-.overlay .login {
+.auth-modal .login {
   background: #000000;
   color: #ffffff;
   font-size: 1rem;
@@ -33,30 +36,27 @@
   align-items: center;
   justify-content: center;
 }
-.overlay .signup {
+.auth-modal .signup {
   background: #ffffff;
   color: #000000;
   border: 1px solid #d9d9d9;
 }
-.overlay .google {
+.auth-modal .google {
   background: #5383ec;
   color: #ffffff;
 }
-.overlay .kakao {
+.auth-modal .kakao {
   background: #fee500;
   color: #000000;
 }
-.overlay .auth-modal {
-  padding: 2rem;
-  width: 34rem;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border-radius: 1rem;
-}
-.overlay .auth-modal form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.48);
+  display: none;
 }/*# sourceMappingURL=auth.css.map */
