--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -53,7 +53,7 @@ body {
 #navbar .nav-container .nav-inner .main-nav .nav-menu .nav-item {
   list-style: none;
 }
-#navbar .nav-container .nav-inner .main-nav .nav-menu .nav-item a {
+#navbar .nav-container .nav-inner .main-nav .nav-menu .nav-item .nav-item-btn {
   margin: 0 10px;
   color: var(--Grey700);
   padding: 12px 10px;
