--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -1,4 +1,12 @@
-.auth-modal {
+.auth-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+.auth-container .auth-modal {
   padding: 2rem;
   width: 34rem;
   z-index: 2;
@@ -8,18 +16,18 @@
   gap: 1rem;
   border-radius: 1rem;
 }
-.auth-modal form {
+.auth-container .auth-modal form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.auth-modal .modal-header {
+.auth-container .auth-modal .modal-header {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.auth-modal .btn {
+.auth-container .auth-modal .btn {
   box-sizing: border-box;
   padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
@@ -28,7 +36,7 @@
   align-items: center;
   justify-content: center;
 }
-.auth-modal .login {
+.auth-container .auth-modal .login {
   background: #000000;
   color: #ffffff;
   font-size: 1rem;
@@ -36,21 +44,20 @@
   align-items: center;
   justify-content: center;
 }
-.auth-modal .signup {
+.auth-container .auth-modal .signup {
   background: #ffffff;
   color: #000000;
   border: 1px solid #d9d9d9;
 }
-.auth-modal .google {
+.auth-container .auth-modal .google {
   background: #5383ec;
   color: #ffffff;
 }
-.auth-modal .kakao {
+.auth-container .auth-modal .kakao {
   background: #fee500;
   color: #000000;
 }
-
-.overlay {
+.auth-container .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -58,5 +65,4 @@
   height: 100vh;
   z-index: 1;
   background: rgba(0, 0, 0, 0.48);
-  display: none;
 }/*# sourceMappingURL=auth.css.map */
