--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -1,5 +1,10 @@
+$primary: #3f3f3f;
+$secondary: #030303;
+$white: #fff;
+$gray: #9b9b9b;
 
-.modalFirstBlack{
+.modalFirstBlack {
+  // 모달의 검은 배경으로 역할을 합니다.
   position: fixed;
   top: 100vh;
   left: 0;
@@ -7,62 +12,71 @@
   height: 100%;
   margin: 0%;
   transition: 0.3s;
-  background-color: rgba(74, 70, 70, 0.5);
+  background-color: transparent;
   display: flex;
   align-items: flex-end;
   z-index: 4;
+  top: 0px;
 }
-.modalSecondWhite{
-  width: 100%;
-  height: 80%;
-  background-color: white;
-  border-radius: 10px 10px 0px 0px;
+
+// 모달의 내용이 나오는 흰 배경입니다.
+.modalSecondWhite {
   position: relative;
+  width: 100%;
+  height: 90%;
+  background-color: white;
+  border-radius: 16px 16px 0px 0px;
   z-index: 5;
+  border: 0.5px solid #333d4b;
+  overflow-y: auto;
 }
-.modalFlex{
-  width: 40%;
-  margin: auto;
+
+.modalFlex {
+  width: 80%;
+  height: 100%;
+  max-width: 900px;
+  margin: 0 auto;
   background-color: white;
 }
-.modalGrid{
+
+.modalGrid {
   display: grid;
-  grid-template-columns: 80%10%10%;
+  grid-template-columns: 80% 10% 10%;
   height: 100px;
-  h1{
-    text-align: left;
+  margin: 20px 20px;
+  .modalTitle {
+    text-align: center;
     color: black;
+    font-weight: 700;
   }
-  button{
+  .modal-btn {
     width: 60%;
     height: 30%;
-    margin-top: 15px;
+    color: #333d4b;
+    // margin-top: 25px;
+    // margin-bottom: 20px;
+    // grid-column-end:span;
+    align-self: flex-end;
     border: none;
     background-color: transparent;
     transition-duration: 0.5s;
-    &:hover{
+
+    &:hover {
       transform: scale(1.4);
       background-color: whitesmoke;
       cursor: pointer;
     }
   }
-  #modalButtonModify  {
-    background-image: url("");
-    background-size: cover;
-    margin-right: -10px;
-  }
-  #modalModify{
-    background-image: url("");
-    background-size: cover;
-    margin-right: -10px;
-    display: none;
-  }
 
-  
-  #modalTitleInput{
+  #modalButtonModify {
+    background-image: url("");
+    background-size: cover;
+  }
+  #modalModify-completed {
+    background-image: url("");
+    background-size: cover;
     display: none;
   }
-  
 
   .modalButtonDelete {
     background-image: url("");
@@ -70,32 +84,195 @@
     margin-left: -3px;
   }
 }
-#contentTextarea{
-  display: none;
-}
 
-#modalDate{
-}
+// modal
+.modal-container {
+  // background-color: #222222;
 
-.modalButtonClose{
- position: absolute;
- right: 10px;
- top: 15px;
- border: none;
- background-color: transparent;
- &:hover{
-  transform: scale(1.4);
-  background-color: whitesmoke;
-  cursor: pointer;
+  position: relative;
+  // border: 1px solid black;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 30px;
+  min-height: 1000px;
+  padding: 40px 20px;
+
+  // #modalTitleInput {
+  //   display: none;
+  //   width: 600px;
+  //   height: 30px;
+  //   padding: 10px 20px;
+  //   border-radius: 15px;
+  //   background-color: #333d4b;
+  // }
+
+  #modalTitle {
+    color: #333d4b;
+    font-size: 48px;
+    line-height: 1.8;
+    padding: 10px;
+    font-weight: 600;
+  }
+  time {
+    font-size: 15px;
+    padding: 10px;
+    color: #8b95a1;
+  }
+
+  .modalPicture {
+    margin-top: 30px;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+  .content-dsc {
+    color: rgb(78, 89, 104);
+    margin: 60px 40px;
+    .modalContent {
+      line-height: 2;
+      font-size: 18px;
+      font-weight: 300;
+    }
+    #contentTextarea {
+      line-height: 1.4;
+    }
   }
 }
 
-.modalPicture{
-width: 30%;
-height: 50%;
-border-radius: 10px;
-margin: 10px 0px 10px 0px;
+#modalDate {
 }
-.modalContent{
 
+.modalButtonClose {
+  position: absolute;
+  right: 10px;
+  top: 15px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.modalPicture {
+  width: 30%;
+  height: 50%;
+  border-radius: 10px;
+  margin: 10px 0px 10px 0px;
+}
+.modalContent {
+}
+
+// 제목수정부분
+
+.form__group {
+  display: none;
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 50%;
+}
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid $gray;
+  outline: 0;
+  font-size: 1.3rem;
+  color: #333d4b;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+
+  &::placeholder {
+    color: transparent;
+  }
+
+  &:placeholder-shown ~ .form__label {
+    font-size: 1.3rem;
+    cursor: text;
+    top: 20px;
+  }
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: $gray;
+}
+
+.form__field:focus {
+  ~ .form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: $primary;
+    font-weight: 700;
+  }
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, $primary, $secondary);
+  border-image-slice: 1;
+}
+/* reset input */
+.form__field {
+  &:required,
+  &:invalid {
+    box-shadow: none;
+  }
+}
+
+// 내용 수정
+
+.text__grop {
+  width: 100%;
+}
+#contentTextarea {
+  display: none;
+  padding: 20px;
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+  border: 2px solid $gray;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+
+#contentTextarea:focus {
+  border-image: linear-gradient(to right, $primary, $secondary);
+}
+.content-container {
+  margin: 4rem 0 8rem;
+  #container {
+    width: 45rem;
+    margin: 4.5rem auto 0;
+    padding: 0 2.5rem;
+    min-height: 100vh;
+    #profile {
+      display: flex;
+      flex-direction: column;
+      margin: 0 0 3.5rem;
+      gap: 24px;
+      #Profile-img {
+        object-fit: cover;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+      }
+      label {
+        // img input의 클릭영역과 가시영역을 일치시킵니다.
+        width: 10rem;
+      }
+      #img-input {
+        display: none;
+      }
+    }
+    .my-article-section-title {
+      margin: 0 0 2rem;
+    }
+  }
 }
