--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -255,4 +255,8 @@
 }
 .content-container #container .my-article-section-title {
   margin: 0 0 2rem;
+}
+
+#contentTextarea {
+  width: 100%;
 }/*# sourceMappingURL=detail.css.map */
