--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -1,5 +1,8 @@
 .auth-container {
   position: absolute;
+  z-index: 1;
+  top: 3.75rem;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,9 +10,11 @@
   width: 100vw;
 }
 .auth-container .auth-modal {
+  position: fixed;
+  top: 25%;
   padding: 2rem;
   width: 34rem;
-  z-index: 2;
+  z-index: 3;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -58,11 +63,11 @@
   color: #000000;
 }
 .auth-container .overlay {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 3.75rem;
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1;
+  z-index: 2;
   background: rgba(0, 0, 0, 0.48);
 }/*# sourceMappingURL=auth.css.map */
