--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -6,17 +6,39 @@ $gray: #9b9b9b;
 .modalFirstBlack {
   // 모달의 검은 배경으로 역할을 합니다.
   position: fixed;
-  top: 100vh;
   left: 0;
   width: 100%;
   height: 100%;
   margin: 0%;
-  transition: 0.3s;
-  background-color: transparent;
+
   display: flex;
+  flex-direction: column;
   align-items: flex-end;
-  z-index: 4;
-  top: 0px;
+  z-index: 20;
+  overflow-y: hidden;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.8);
+  // cursor: pointer;
+  // top: 0px;
+}
+
+.modal-side {
+  width: 100%;
+  height: 10%;
+  cursor: pointer;
+}
+
+.visible {
+  top: 0vh;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  transition: all 0.2s cubic-bezier(0.2, -0.01, 0, 1.02);
+}
+
+.hide {
+  opacity: 0;
+  transition: all 0.2s cubic-bezier(0.2, -0.01, 0, 1.02);
 }
 
 // 모달의 내용이 나오는 흰 배경입니다.
@@ -26,7 +48,7 @@ $gray: #9b9b9b;
   height: 90%;
   background-color: white;
   border-radius: 16px 16px 0px 0px;
-  z-index: 5;
+  z-index: 25;
   border: 0.5px solid #333d4b;
   overflow-y: auto;
 }
@@ -145,11 +167,19 @@ $gray: #9b9b9b;
 
 .modalButtonClose {
   position: absolute;
-  right: 10px;
-  top: 15px;
+  right: 8px;
+  top: 60px;
+  width: 24px;
+
+  height: 24px;
+
   border: none;
-  background-color: transparent;
+  color: #dbdbde;
   cursor: pointer;
+  transition: all 0.7s;
+}
+.modalButtonClose:hover {
+  color: white;
 }
 
 .modalPicture {
@@ -229,53 +259,58 @@ $gray: #9b9b9b;
 // 내용 수정
 
 .text__grop {
-  width: 100%;
-}
-#contentTextarea {
   display: none;
-  padding: 20px;
   width: 100%;
-  max-width: 400px;
-  height: 400px;
-  border: 2px solid $gray;
-  font-size: 1rem;
-  border-radius: 5px;
-}
-
-#contentTextarea:focus {
-  border-image: linear-gradient(to right, $primary, $secondary);
-}
-.content-container {
-  margin: 4rem 0 8rem;
-  #container {
-    width: 45rem;
-    margin: 4.5rem auto 0;
-    padding: 0 2.5rem;
-    min-height: 100vh;
-    #profile {
-      display: flex;
-      flex-direction: column;
-      margin: 0 0 3.5rem;
-      gap: 24px;
-      #Profile-img {
-        object-fit: cover;
-        width: 10rem;
-        height: 10rem;
-        border-radius: 50%;
-      }
-      label {
-        // img input의 클릭영역과 가시영역을 일치시킵니다.
-        width: 10rem;
-      }
-      #img-input {
-        display: none;
-      }
-    }
-    .my-article-section-title {
-      margin: 0 0 2rem;
-    }
+  .content-label {
+    font-size: 1rem;
+    color: $gray;
+    padding-bottom: 20px;
+  }
+  #contentTextarea {
+    padding: 20px;
+    width: 100%;
+    max-width: 400px;
+    height: 400px;
+    border: 2px solid $gray;
+    font-size: 1rem;
+    border-radius: 5px;
+  }
+  #contentTextarea:focus {
+    border-image: linear-gradient(to right, $primary, $secondary);
   }
 }
-#contentTextarea {
-  width: 100%;
-}
+
+// .content-container {
+//   margin: 4rem 0 8rem;
+//   #container {
+//     width: 45rem;
+//     margin: 4.5rem auto 0;
+//     padding: 0 2.5rem;
+//     min-height: 100vh;
+//     #profile {
+//       display: flex;
+//       flex-direction: column;
+//       margin: 0 0 3.5rem;
+//       gap: 24px;
+//       #Profile-img {
+//         object-fit: cover;
+//         width: 10rem;
+//         height: 10rem;
+//         border-radius: 50%;
+//       }
+//       label {
+//         // img input의 클릭영역과 가시영역을 일치시킵니다.
+//         width: 10rem;
+//       }
+//       #img-input {
+//         display: none;
+//       }
+//     }
+//     .my-article-section-title {
+//       margin: 0 0 2rem;
+//     }
+//   }
+// }
+// #contentTextarea {
+//   width: 100%;
+// }
