로그인 성공시 모달종료 , nav 메뉴 유저에 맞게 변경 완료

--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -8,6 +8,10 @@ body {
   --adaptiveOpacity50: rgba(0, 23, 51, 0.05);
 }
 
+.Login {
+  display: none;
+}
+
 #navbar {
   border-bottom: 0.5px solid var(--Grey500);
   position: fixed;
