--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -109,25 +109,14 @@ $gray: #9b9b9b;
 
 // modal
 .modal-container {
-  // background-color: #222222;
-
   position: relative;
-  // border: 1px solid black;
+
   display: flex;
   align-items: center;
   flex-direction: column;
   padding: 20px 30px;
   min-height: 1000px;
   padding: 40px 20px;
-
-  // #modalTitleInput {
-  //   display: none;
-  //   width: 600px;
-  //   height: 30px;
-  //   padding: 10px 20px;
-  //   border-radius: 15px;
-  //   background-color: #333d4b;
-  // }
 
   #modalTitle {
     color: #333d4b;
@@ -141,13 +130,19 @@ $gray: #9b9b9b;
     padding: 10px;
     color: #8b95a1;
   }
-
-  .modalPicture {
-    margin-top: 30px;
-    text-align: center;
+  .img-container {
     width: 100%;
-    height: 100%;
+    #img-input {
+      display: none;
+    }
+    #modalPicture {
+      margin-top: 30px;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+    }
   }
+
   .content-dsc {
     color: rgb(78, 89, 104);
     margin: 60px 40px;
@@ -280,39 +275,32 @@ $gray: #9b9b9b;
   }
 }
 
-.content-container {
-  margin: 4rem 0 8rem;
-  #container {
-    width: 45rem;
-    margin: 4.5rem auto 0;
-    padding: 0 2.5rem;
-    min-height: 100vh;
+// .content-container {
+//   margin: 4rem 0 8rem;
+//   #container {
+//     width: 45rem;
+//     margin: 4.5rem auto 0;
+//     padding: 0 2.5rem;
+//     min-height: 100vh;
 
-    #modalPicture {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-    }
-    label {
-      // img input의 클릭영역과 가시영역을 일치시킵니다.
-      width: 10rem;
-    }
-    #img-input {
-      display: none;
-    }
-  }
-  .my-article-section-title {
-    margin: 0 0 2rem;
-  }
-}
-#uplord {
-  width: 30%;
-  height: 50%;
-  border-radius: 10px;
-  margin: 10px 0px 10px 0px;
-  display: none;
-}
+//     label {
+//       // img input의 클릭영역과 가시영역을 일치시킵니다.
+//       width: 10rem;
+//     }
+//     #img-input {
+//       display: none;
+//     }
+//   }
+//   .my-article-section-title {
+//     margin: 0 0 2rem;
+//   }
+// }
+// #uplord {
+//   width: 30%;
+//   height: 50%;
+//   border-radius: 10px;
+//   margin: 10px 0px 10px 0px;
+// }
 
 // .content-container {
 //   margin: 4rem 0 8rem;
@@ -336,9 +324,7 @@ $gray: #9b9b9b;
 //         // img input의 클릭영역과 가시영역을 일치시킵니다.
 //         width: 10rem;
 //       }
-//       #img-input {
-//         display: none;
-//       }
+//
 //     }
 //     .my-article-section-title {
 //       margin: 0 0 2rem;
