Update Google login
구글 로그인이 모달을 통해서 가능하도록 업데이트

--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -59,8 +59,8 @@
   color: #ffffff;
 }
 .auth-container .auth-modal .kakao {
-  background: #fee500;
-  color: #000000;
+  background: #171917;
+  color: #ffffff;
 }
 .auth-container .overlay {
   position: fixed;
