--- a/static/scss/auth.scss
+++ b/static/scss/auth.scss
@@ -58,8 +58,8 @@
       color: #ffffff;
     }
     .kakao {
-      background: #fee500;
-      color: #000000;
+      background: #171917;
+      color: #ffffff;
     }
   }
 
