--- a/static/scss/auth.css
+++ b/static/scss/auth.css
@@ -58,7 +58,7 @@
   background: #5383ec;
   color: #ffffff;
 }
-.auth-container .auth-modal .kakao {
+.auth-container .auth-modal .github {
   background: #171917;
   color: #ffffff;
 }
