--- a/static/scss/auth.scss
+++ b/static/scss/auth.scss
@@ -57,7 +57,7 @@
       background: #5383ec;
       color: #ffffff;
     }
-    .kakao {
+    .github {
       background: #171917;
       color: #ffffff;
     }
