--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -110,7 +110,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    cursor: pointer;
+
+    .post-add-btn {
+      width: 80%;
+      height: 70px;
+      background-color: white;
+      border-radius: 10px;
+    }
     .btn {
       width: 80%;
       height: 70px;
