--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   margin: 0%;
+  top: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
