--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -10,7 +10,7 @@ $gray: #9b9b9b;
   width: 100%;
   height: 100%;
   margin: 0%;
-
+  top: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
