--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -96,7 +96,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
+.content-container .create-content .post-add-btn {
+  width: 80%;
+  height: 70px;
+  background-color: white;
+  border-radius: 10px;
+  cursor: pointer;
 }
 .content-container .create-content .btn {
   width: 80%;
