Update detail Modal
append로 붙은 div의 width는 자동으로 auto이기 때문에 가변적이었습니다. 100%로 수정해서 통일시켰습니다.

--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -13,6 +13,9 @@
   opacity: 0;
   background: rgba(0, 0, 0, 0.8);
 }
+.modalFirstBlack .append-wrapper {
+  width: 100%;
+}
 
 .modal-side {
   width: 100%;
