--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: flex-end;
   z-index: 20;
-  overflow-y: hidden;
+  overflow-y: auto;
   opacity: 0;
   background: rgba(0, 0, 0, 0.8);
 }
