--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -15,7 +15,7 @@ $gray: #9b9b9b;
   flex-direction: column;
   align-items: flex-end;
   z-index: 20;
-  overflow-y: hidden;
+  overflow-y: auto;
   opacity: 0;
   background: rgba(0, 0, 0, 0.8);
   // cursor: pointer;
