--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -137,9 +137,7 @@ body {
   margin: auto;
   display: block;
   min-width: 100%;
-  max-width: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  max-height: 430px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px;
