--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -152,9 +152,7 @@ body {
         margin: auto;
         display: block;
         min-width: 100%;
-        max-width: 100%;
-        min-height: 100%;
-        max-height: 100%;
+        max-height: 430px;
         object-fit: cover;
         border-radius: 15px;
         margin-bottom: 30px;
