--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -104,8 +104,8 @@ $gray: #9b9b9b;
   }
 
   #modalButtonModify {
-    background-image: url("");
     background-size: cover;
+    background-color: white;
   }
   #modalModify-completed {
     background-image: url("");
@@ -113,10 +113,9 @@ $gray: #9b9b9b;
     display: none;
   }
 
-  .modalButtonDelete {
-    background-image: url("");
+  #modalButtonDelete {
+    background-color: white;
     background-size: cover;
-    margin-left: -3px;
   }
 }
 
@@ -194,8 +193,6 @@ $gray: #9b9b9b;
   height: 50%;
   border-radius: 10px;
   margin: 10px 0px 10px 0px;
-}
-.modalContent {
 }
 
 // 제목수정부분
@@ -297,4 +294,79 @@ $gray: #9b9b9b;
 
 .btn-hide {
   display: none !important;
+}
+
+// 삭제 확인 모달
+.modal {
+  width: 27rem;
+  height: 252px;
+  border-radius: 1rem;
+  padding: 80px 24px;
+  // padding: 2rem;
+  box-sizing: border-box;
+  text-align: center;
+  .btn {
+    cursor: pointer;
+    border: 1px solid #333d4b;
+    text-align: center;
+    border-radius: 5px;
+    outline: none;
+    font-weight: 500;
+  }
+}
+
+.dimLayer {
+  display: block;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.04);
+  position: fixed;
+  left: 0;
+  top: 0px;
+  margin: 0;
+  padding: 0;
+  z-index: 9998;
+}
+
+#modal-section {
+  background: #ffffff;
+  box-sizing: border-box;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  box-shadow: 0px 16px 72px 16px #0000000a;
+
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+.menu_msg {
+  font-size: 21px;
+  font-weight: 500;
+}
+.enroll_box p {
+  padding-bottom: 56px;
+  color: #333d4b;
+}
+.gray_btn {
+  width: 90px;
+  background: #ffffff;
+  color: #333d4b;
+  height: 36px;
+  line-height: 36px;
+  transition: 0.5s;
+  font-size: 17px;
+}
+.pink_btn {
+  width: 90px;
+  background: #333d4b;
+  color: #fff;
+  height: 36px;
+  line-height: 36px;
+  transition: 0.5s;
+  font-size: 17px;
+  border: none;
 }
