디테일페이지 내용 레이아웃 , 시간 수정완료

--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -134,6 +134,7 @@
 .modal-container .content-dsc {
   color: rgb(78, 89, 104);
   margin: 60px 40px;
+  text-align: start;
 }
 .modal-container .content-dsc .modalContent {
   line-height: 2;
