--- a/static/scss/detail.scss
+++ b/static/scss/detail.scss
@@ -155,6 +155,7 @@ $gray: #9b9b9b;
   .content-dsc {
     color: rgb(78, 89, 104);
     margin: 60px 40px;
+    text-align: start;
     .modalContent {
       line-height: 2;
       font-size: 18px;
