--- a/static/scss/detail.css
+++ b/static/scss/detail.css
@@ -132,8 +132,8 @@
 }
 .modal-container .content-dsc {
   color: rgb(78, 89, 104);
-  margin: 60px 40px;
-  text-align: start;
+  margin: 60px 0;
+  align-self: baseline;
 }
 .modal-container .content-dsc .modalContent {
   line-height: 2;
