새로운글 추가할때 이미지 넣으면 크기에 맞게 들어가는 동작 수정

--- a/static/scss/createPost.css
+++ b/static/scss/createPost.css
@@ -6,7 +6,11 @@
   padding: 30px;
 }
 
+.img-filebox {
+  width: 100%;
+}
 .img-filebox #createPost-img label img {
+  width: 100%;
   border-radius: 15px;
   cursor: pointer;
   transition: all 0.3s;
